# multiclawprotocol

./: .env.example  .gitignore  LICENSE  README.md  THIRD-PARTY-LICENSES.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
config/: router.yaml
docs/: USER-GUIDE.md  architecture.md  envelope-v1.json
pipelines/: storefront-build.yaml
scripts/: setup.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent_fs.rs  execution.rs  health.rs  logging.rs  mod.rs  models.rs  pty.rs
src-tauri/src/engine/: chromadb.rs  cost_ledger.rs  docker_runner.rs  envelope.rs  mod.rs  orchestrator.rs  runner.rs  state_machine.rs
src/components/auth/: SignupPortal.tsx
src/components/canvas/: AgentNode.tsx  HitlGateNode.tsx  PipelineCanvas.tsx  TypedEdge.tsx
src/components/chat/: ConnectorChat.tsx
src/components/execution/: CostTicker.tsx  ExecutionOverlay.tsx  ExecutionToolbar.tsx  HitlModal.tsx  LogStream.tsx
src/components/help/: HelpPage.tsx  helpContent.ts
src/components/inspector/: AgentConfigForm.tsx  CostBreakdown.tsx  InspectorPanel.tsx  InspectorWrapper.tsx  SchemaViewer.tsx  SoulEditor.tsx
src/components/layout/: AppLayout.tsx  StatusBar.tsx  ThemeToggle.tsx  TopNav.tsx
src/components/logs/: LogParser.ts  LogViewerPage.tsx
src/components/network/: NetworkGraph3D.tsx
src/data/: demo-agents.ts
src/hooks/: useAgentDragDrop.ts  useConnectionValidator.ts  useExecutionEvents.ts  usePipelineSerializer.ts  useRouterHealth.ts
src/lib/: supabase.ts
src/stores/: agentRegistryStore.ts  executionStore.ts  flowStore.ts  pipelineStore.ts  themeStore.ts
src/styles/: globals.css
src/types/: agent.ts  envelope.ts  pipeline.ts  router.ts
(+7 files in other folders)
