[package]
name = "multiclawprotocol"
version = "0.1.0"
description = "MultiClawProtocol - Visual Agent Orchestration Platform"
authors = ["Ghost (rebelsts)"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "multiclawprotocol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
