[package]
name = "multiclawprotocol"
version = "0.1.0"
description = "MultiClawProtocol - Visual Agent Orchestration Platform"
authors = ["Karl Toussaint <kt2saint-sec>"]
license = "Proprietary"
repository = "https://github.com/kt2saint-sec/multiclawprotocol"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "multiclawprotocol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
dirs = "6"
